--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,11 @@
             app:tabSelectedTextColor="#FF0000"
             app:tabIndicatorColor="#0000FF"
             app:tabIndicatorHeight="5dp"></android.support.design.widget.TabLayout>
+        
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
     </LinearLayout>
 
